parte_4/tema_4.3/ingress/webappanuncios/webappanuncios-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:  
  name: webappanuncios
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - path: /webappanuncios/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: webappanuncios
            port:
              number: 8080
